<resources>
  <string name="app_name">Check Yourself</string>
  <string name="title_home">Home</string>
  <string name="title_spending">Spending</string>
  <string name="title_input">Edit</string>
  <string name="amounts_left">Amounts Left:</string>
  <string name="food">Food:</string>
  <string name="money_sign">$</string>
  <string name="monthly">Monthly:</string>
  <string name="entertainment">Entertainment:</string>
  <string name="miscellaneous">Miscellaneous:</string>
  <string name="monthly_income">Monthly Income</string>
  <string name="monthly_income_hint">Monthly income</string>
  <string name="family_size">Family Size</string>
  <string name="family_size_hint">Size of family</string>
  <string name="people">People</string>
  <string name="percent_savings">Percent Savings</string>
  <string name="percent_savings_hint">Percent to save</string>
  <string name="percent_sign">%</string>
  <string name="monthly_payment_total">Monthly Payment Total</string>
  <string name="monthly_payments_total">Monthly payments Total</string>
  <string name="spending_total">Spending Total:</string>
  <string name="food_total">Food Total:</string>
  <string name="entertainment_total">Entertainment Total:</string>
  <string name="miscellaneous_total">Miscellaneous Total:</string>
  <string name="amount_to_save">Amount to Save:</string>
  <string name="update">Update</string>
  <string name="tag">Tag</string>
  <string name="amount">Amount</string>
  <string name="amount_hint">amount of purchase</string>
  <string name="zero">0</string>
  <string name="info">Info</string>
  <string name="info_hint">Info on purchase</string>
  <string name="n_a">N/A</string>
  <string name="submit">Submit</string>
  <string name="cancel">Cancel</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_location_alert">Map</string>
</resources>
