<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/tag_spinner"
        android:text="@string/tag"/>

      <Spinner
        android:id="@+id/tag_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/amount_edit"
        android:text="@string/amount"
        android:layout_gravity="center_vertical"/>

      <LinearLayout>

        <Spinner
          android:id="@+id/sign_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@android:drawable/btn_dropdown"
          android:spinnerMode="dropdown"/>

        <EditText
          android:id="@+id/amount_edit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/amount_hint"
          android:inputType="numberDecimal"
          android:text="@string/zero"/>

      </LinearLayout>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/info_edit"
        android:text="@string/info"/>

      <EditText
        android:id="@+id/info_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/info_hint"
        android:inputType="text"
        android:text="@string/n_a"/>

    </TableRow>

  </TableLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <Button
      android:id="@+id/spending_submit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/submit"
      tools:ignore="ButtonStyle"/>

    <Button
      android:id="@+id/spending_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/cancel"
      tools:ignore="ButtonOrder,ButtonStyle"/>

  </LinearLayout>

</LinearLayout>