<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context="edu.cnm.deepdive.checkyourself.InputFragment">

  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_gravity="center_vertical"
        android:labelFor="@+id/income_edit"
        android:text="@string/monthly_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:textSize="20sp"/>

      <LinearLayout
        android:layout_column="1"
        android:paddingStart="5dp">

        <TextView
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/money_sign"/>

        <EditText
          android:id="@+id/income_edit"
          android:inputType="numberDecimal"
          android:hint="@string/monthly_income_hint"
          android:layout_width="125dp"
          android:layout_height="30dp"
          android:background="@drawable/border"
          android:paddingStart="5dp"/>

      </LinearLayout>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:labelFor="@+id/family_edit"
        android:text="@string/family_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        android:textSize="20sp"/>

      <LinearLayout
        android:layout_column="1"
        android:paddingStart="13dp"
        >

        <EditText
          android:id="@+id/family_edit"
          android:inputType="number"
          android:hint="@string/family_size_hint"
          android:layout_width="125dp"
          android:layout_height="30dp"
          android:background="@drawable/border"
          android:paddingStart="5dp"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/people"/>

      </LinearLayout>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:labelFor="@+id/savings_edit"
        android:text="@string/percent_savings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_column="0"
        android:textSize="20sp"/>

      <LinearLayout
        android:layout_column="1"
        android:paddingStart="13dp">

        <EditText
          android:id="@+id/savings_edit"
          android:inputType="number"
          android:hint="@string/percent_savings_hint"
          android:layout_width="125dp"
          android:layout_height="30dp"
          android:background="@drawable/border"
          android:paddingStart="5dp"/>

        <TextView
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/percent_sign"/>

      </LinearLayout>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:labelFor="@+id/monthly_edit"
        android:text="@string/monthly_payment_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_column="0"
        android:textSize="20sp"/>

      <LinearLayout
        android:layout_column="1"
        android:paddingStart="5dp">

        <TextView
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:text="@string/money_sign"/>

        <EditText
          android:id="@+id/monthly_edit"
          android:inputType="numberDecimal"
          android:hint="@string/monthly_payments_total"
          android:layout_width="125dp"
          android:layout_height="30dp"
          android:background="@drawable/border"
          android:paddingStart="5dp"/>

      </LinearLayout>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/spending_total"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

      <TextView
        android:id="@+id/total_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/food_total"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

      <TextView
        android:id="@+id/food_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/entertainment_total"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

      <TextView
        android:id="@+id/enter_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/miscellaneous_total"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

      <TextView
        android:id="@+id/misc_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/amount_to_save"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

      <TextView
        android:id="@+id/savings_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

    </TableRow>

    <TableRow
      android:paddingStart="10dp">

      <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/total_edit"
        android:text="@string/update"/>

    </TableRow>
  </TableLayout>
</android.support.constraint.ConstraintLayout>
